# gobgp

./: .dockerignore  .gitignore  Dockerfile  REMEMBER.md  apex.py  conf1.conf  conf2.conf  conf3.conf  conf4.conf  convert.py  docker-compose.yml  entrypoint.py  eval.py  lab-multi.py  lab.py  pyproject.toml  routinator.html  vis.py  vis_paper.py  vis_summary.py  vis_thesis.py
experiments-bad_gadget/bgp-seq1-20251021-094333/: summary_bgp.json
experiments-bad_gadget/bgp-seq1-20260108-061103/: summary_bgp.json
experiments-bad_gadget/bgp-seq2-20251021-095355/: summary_bgp.json
experiments-bad_gadget/bgp-seq2-20260108-062310/: summary_bgp.json
experiments-bad_gadget/bgp-seq3-20251021-100349/: summary_bgp.json
experiments-bad_gadget/bgp-seq3-20260108-063446/: summary_bgp.json
experiments-bad_gadget/bgp-seq4-20251021-101342/: summary_bgp.json
experiments-bad_gadget/bgp-seq4-20260108-064623/: summary_bgp.json
experiments-bad_gadget/bgp-seq5-20251021-102512/: summary_bgp.json
experiments-bad_gadget/bgp-seq5-20260108-065904/: summary_bgp.json
experiments-bad_gadget/bgp-seq6-20251021-103715/: summary_bgp.json
experiments-bad_gadget/bgp-seq6-20260108-071238/: summary_bgp.json
experiments-bad_gadget/bgp-seq7-20251021-104918/: summary_bgp.json
experiments-bad_gadget/bgp-seq7-20260108-072611/: summary_bgp.json
experiments-bad_gadget/bgp-seq8-20251021-105915/: summary_bgp.json
experiments-bad_gadget/bgp-seq8-20260108-073739/: summary_bgp.json
gobgp-lab/: .helmignore  Chart.yaml  bad_gadget.yaml  germany.yaml  intent.yaml  noble-eu.yaml  values.yaml
(+1313 files in other folders)
