[project]
name = "gobgp"
version = "0.1.0"
description = "gRPC-powered GoBGP control API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "requests>=2.32.5",
  "grpcio>=1.74.0",
  "grpcio-tools>=1.74.0",
  "protobuf>=6.32.1",
  "googleapis-common-protos>=1.70.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.9"
]
